k8s/loan-calculator-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-calculator-backend-service
  namespace: loan-calculator
  labels:
    app: loan-calculator-backend
spec:
  selector:
    app: loan-calculator-backend
  ports:
    - protocol: "TCP"
      name: "web"
      port: 8080
      targetPort: 8080
