k8s/loan-calculator-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-calculator-frontend-service
  namespace: loan-calculator
spec:
  selector:
    app: loan-calculator-frontend
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
