k8s/loan-calculator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-calculator-ingress
  namespace: loan-calculator
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: loan-calculator-backend-service
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loan-calculator-frontend-service
            port:
              number: 3000
